# ISIC-2024-Skin-Cancer-Detection-with-3D-TBP

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  run.sh
